# gsearch

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  gsearch_database.txt  hnswdump.hnsw.data  hnswdump.hnsw.graph  installpb.md  todo.md
Old/: tohnsw.rs
Old/request/: main.rs
binaux/: Cargo.toml  getdatamap.rs  lib.rs
binaux/src/: hnswiter.rs
data/: README.md
data/HMM_archaea/: PF00368.19.HMM  PF00410.20.HMM  PF00687.22.HMM  PF00827.18.HMM  PF00900.21.HMM  PF01000.27.HMM  PF01015.19.HMM  PF01090.20.HMM  PF01092.20.HMM  PF01157.19.HMM  PF01191.20.HMM  PF01194.18.HMM  PF01198.20.HMM  PF01200.19.HMM  PF01269.18.HMM  PF01280.21.HMM  PF01282.20.HMM  PF01496.20.HMM  PF01655.19.HMM  PF01798.19.HMM  PF01864.18.HMM  PF01866.18.HMM  PF01868.17.HMM  PF01984.21.HMM  PF01990.18.HMM  PF02006.17.HMM  PF02978.20.HMM  PF03874.17.HMM  PF04019.13.HMM  PF04104.15.HMM  PF04919.13.HMM  PF07541.13.HMM  PF13656.7.HMM  PF13685.7.HMM  TIGR00021.HMM  TIGR00037.HMM  TIGR00042.HMM  TIGR00111.HMM  TIGR00134.HMM  TIGR00240.HMM  (+78 more)
data/HMM_bacteria/: PF00380.20.HMM  PF00466.21.HMM  PF01025.20.HMM  PF02576.18.HMM  PF03726.15.HMM  TIGR00006.HMM  TIGR00019.HMM  TIGR00020.HMM  TIGR00029.HMM  TIGR00043.HMM  TIGR00054.HMM  TIGR00059.HMM  TIGR00061.HMM  TIGR00064.HMM  TIGR00065.HMM  TIGR00082.HMM  TIGR00083.HMM  TIGR00084.HMM  TIGR00086.HMM  TIGR00088.HMM  TIGR00090.HMM  TIGR00092.HMM  TIGR00095.HMM  TIGR00115.HMM  TIGR00116.HMM  TIGR00138.HMM  TIGR00158.HMM  TIGR00166.HMM  TIGR00168.HMM  TIGR00186.HMM  TIGR00194.HMM  TIGR00250.HMM  TIGR00344.HMM  TIGR00362.HMM  TIGR00382.HMM  TIGR00392.HMM  TIGR00396.HMM  TIGR00414.HMM  TIGR00416.HMM  TIGR00420.HMM  (+75 more)
scripts/: dictjsontocsv.ipynb  multiple_build.sh  multiple_search.sh  reformat.sh  split_folder.sh
src/: answer.rs  files.rs  idsketch.rs  lib.rs  main.rs  match.rs  matcher.rs
src/aa/: aafiles.rs  aarequest.rs  aasketch.rs  mod.rs
src/dna/: dnafiles.rs  dnarequest.rs  dnasketch.rs  mod.rs
src/rna/: mod.rs  rnafiles.rs  rnarequest.rs  rnasketch.rs
src/utils/: dumpload.rs  embed.rs  files.rs  idsketch.rs  mod.rs  parameters.rs  reloadhnsw.rs
