[package]
name = "gsearch"
version = "0.1.6"
authors = ["jeanpierre.both@gmail.com", "jianshuzhao@yahoo.com"]
repository = "https://github.com/jean-pierreBoth/gsearch"
keywords = ["hnsw", "probminhash", "bacteria"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "genome classification, probminhash hnsw, genome search"

[dependencies]
hnsw_rs = { workspace = true }
clap = {workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true}
cpu-time = { workspace = true }
chrono = {workspace = true}
num_cpus = { version = "1.14" }
num-traits = { workspace = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
csv = { version = "1.1" }

# hash and related
fxhash = { version = "0.2" }

# for //

crossbeam-utils = { version = "0.8" }
crossbeam-channel = { version = "0.5" }
crossbeam = { version = "0.8" }
concurrent-queue = { version = "2.5" }
rayon = {workspace = true}

num = { version = "0.4" }
memory-stats = { version = "1.1", features = ["always_use_statm"] }

needletail = { workspace = true}


# probminhash = { version = "0.1.11" }
probminhash = {workspace = true}
# probminhash = {path = "../probminhash"}


# optional dependency to embed hnsw graph
annembed = { version = "0.1.4"}
# annembed = { git = "https://github.com/jean-pierreBoth/annembed", optional = true }
# annembed = { path = "../annembed"}

# kmerutils = { version = "0.0.13" }
kmerutils = {workspace = true}

anndists = { git = "https://github.com/jean-pierreBoth/anndists" }
xxhash-rust = "0.8"
hyperminhash = "0.1.3"

[[bin]]

name = "gsearch"
path = "src/bin/gsearch.rs"

[[bin]]

name = "reformat"
path = "src/bin/reformat.rs"


[[bin]]

name = "hnsw2knn"
path = "src/bin/hnsw2knn.rs"

[[bin]]

name = "bindash"
path = "src/bin/bindash.rs"


[[bin]]

name = "hypermash"
path = "src/bin/hypermash.rs"

[lib]

path = "src/lib.rs"

[workspace]
members = ["binaux"]


[workspace.dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#


chrono = { version = "0.4" }
num = { version = "0.4" }


# parking_lot = { version = "0.12" }
rayon = { version = "1.10" }

cpu-time = { version = "1.0" }
needletail = { version = "0.6" }
clap = { version = "4.5" }

hnsw_rs = { version = "0.3.1" }

# hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs" }
# hnsw_rs = {git = "https://gitlab.com/jpboth/hnswlib-rs.git"}
# hnsw_rs = { path = "../hnswlib-rs" }

probminhash = { git = "https://github.com/jean-pierreBoth/probminhash" }
# probminhash = { version = "0.1"}

# kmerutils = { path = "../kmerutils" }
kmerutils = { git = "https://github.com/jean-pierreBoth/kmerutils" }
# kmerutils = {git = "https://gitlab.com/jpboth/kmerutils.git"}
# kmerutils = { version = "0.0.13" }

lazy_static = { version = "1.4" }

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }




# no more pb with between anyhow intel-mkl-src
anyhow = { version = ">=1.0.58" }
num-traits = "0.2"




[features]

default = []

annembed_openblas-static = ["annembed/openblas-static"]
annembed_openblas-system = ["annembed/openblas-system"]
annembed_intel-mkl = ["annembed/intel-mkl-static"]
annembed_accelerate = ["annembed/macos-accelerate"]

withzmq = ["kmerutils/withzmq"]
simdeez_f = ["hnsw_rs/simdeez_f", "kmerutils/simdeez_f", "anndists/simdeez_f"]
stdsimd_f = ["hnsw_rs/stdsimd", "kmerutils/stdsimd", "anndists/stdsimd"]
