[package]
name = "binaux"
version = "0.1.6"
authors = ["jianshuzhao@yahoo.com"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "genome classification, complementary binaries for genome search"

[[bin]]
name = "superani"
path = "src/bin/superani.rs"

[[bin]]
name = "FragGeneScanRs"
path = "src/bin/FragGeneScanRs.rs"


[[bin]]

name = "superaai"
path = "src/bin/superaai.rs"

[[bin]]

name = "bigsig"
path = "src/bin/bigsig.rs"

[[bin]]

name = "hnswcore"
path = "src/bin/hnswcore.rs"

[dependencies]

clap = { workspace = true }
rayon = {workspace = true }
env_logger = { workspace = true }
log = {workspace = true}
anyhow = {workspace = true}
needletail = {workspace = true}
hnsw_rs = { workspace = true }
cpu-time = { workspace = true }


quantiles = { version = "0.7.1" }
rand = { version = "0.9" }
indexmap = { version = "2.9"}




seq_io = "0.3"
chrono = { version = "0.4" }
frag_gene_scan_rs = "1.1.0"
#frag_gene_scan_rs = { git = "https://gitlab.com/Jianshu_Zhao/fraggenescanrs" }
# skani = "0.1.1"
# skani = { path = "../../skani" }
skani = {git = "https://github.com/jean-pierreBoth/skani"}
sourmash = "0.19"
bigsig = "0.3.2"
fromhnsw = "0.1.1"
coreset = "0.1.1"

